# CardForge

./: .gitignore  README.md  manifest-new-card.json  package.json  pnpm-lock.yaml  pyproject.toml
apps/studio/: README.md  index.html  package.json  tsconfig.tsbuildinfo
configs/examples/: business_card_basic.json
docs/: ARCHITECTURE.md  ASSETS_AND_PREVIEW.md  BUILD_REPORTS.md  COMPONENTS.md  CORE_BRIDGE.md  DOMAIN_MODEL.md  FIRST_PRINT.md  GEOMETRY_IR.md  MANUFACTURING_ENGINE.md  MONOREPO.md  MULTICOLOR_STL.md  OPENSCAD_AND_STL.md  PHYSICAL_PROTOTYPE_CHECKLIST.md  PIPELINE.md  PRINTING_GUIDELINES.md  PRINT_TEST_REPORT_TEMPLATE.md  PROTOTYPE_LOOP.md  PUBLISH_PIPELINE.md  ROADMAP.md  STUDIO_ARCHITECTURE.md  STUDIO_BRIDGE.md  STUDIO_INTERACTIVE_CANVAS.md  STUDIO_MVP_001.md  SVG_VISITOR.md
examples/: javier.cardforge.json
examples/prototypes/: card_dark_luxury.cardforge.json  card_minimal.cardforge.json  card_tech_pattern.cardforge.json
exports/: _test_config.json
openscad/: main.scad
openscad/modules/: card_base.scad  relief.scad  rounded_rect.scad  svg_layer.scad  text_layer.scad
scripts/: build.py  build_prototypes.py  core_cli.py
tests/assets/: test_asset_manager.py  test_patterns.py  test_qr.py  test_svg_utils.py
tests/document/: test_document.py  test_prototypes.py
tests/domain/: test_card.py  test_constraints.py  test_factory.py  test_feature.py  test_geometry.py  test_material.py
tests/export/: test_paths.py
tests/geometry_ir/: test_builder.py  test_nodes.py  test_openscad_visitor.py  test_svg_visitor.py
tests/manufacturing/: test_report.py  (+3 more)
(+164 files in other folders)
