[project]
name = "cardforge"
version = "0.1.0"
description = "Generador modular de objetos planos 3D personalizados"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Javier Rodriguez" }
]

dependencies = [
    "qrcode>=7.4",
    "Pillow>=10.0",
    "svgwrite>=1.4",
    "PyYAML>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.scripts]
cardforge = "cardforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
